feat: [core-services] Update create and get list account
